[gd_scene format=3 uid="uid://cwxf4mu2iuu5d"]

[ext_resource type="Texture2D" uid="uid://cpgtsanvul18t" path="res://assets/sprites/Enemies/magma monster.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://cp8yj302gvp76" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4w8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7p1mj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ra3w"]

[node name="Enemy" type="CharacterBody2D" unique_id=469638766]
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1503131229]
sprite_frames = SubResource("SpriteFrames_c4w8v")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1023282953]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_7p1mj")

[node name="WallDetector" type="RayCast2D" parent="." unique_id=386205841]
target_position = Vector2(-57, 0)

[node name="HurtBox" type="Area2D" parent="." unique_id=1847811780]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" unique_id=2094576900]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="HitBox" type="Area2D" parent="." unique_id=1545099551]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1675689899]
position = Vector2(2, 1)
shape = SubResource("CapsuleShape2D_4ra3w")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
